# data-quality-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: customers_orders_dirty.csv
dqa/: cli.py  io.py  profiler.py  rules.py  scoring.py
dqa/checks/: __init__.py  completeness.py  consistency.py  outliers.py  uniqueness.py  validity.py
dqa/reporting/: __init__.py  html_report.py
dqa/reporting/templates/: report.html.j2
examples/: demo.csv  rules.yml
out_big/: issues.csv  report.html  summary.csv
tests/: test_checks_unit.py  test_end_to_end.py
